# Evolution-of-Todo

./: README.md  requirements.txt
backend/: .env  (+1 more)
phase-3/: .env  .gitignore  BACKEND_VERIFICATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  main.py  pyproject.toml  tmpclaude-30b0-cwd
phase-3/.claude/: settings.local.json
phase-3/.specify/memory/: constitution.md
phase-3/backend/: .env  .env.example  config.py  pyproject.toml  quickstart-validation.py  requirements.txt  test_chatbot.py
phase-3/backend/.claude/: settings.local.json
phase-3/backend/api/: chat_routes.py
phase-3/backend/chat/: README.md  __init__.py  agent.py  mcp_client.py  models.py  runner.py
phase-3/backend/database/: message.py  migrations.py
phase-3/backend/dependencies/: auth.py
phase-3/backend/docs/: api-reference.md  database-models.md
phase-3/backend/middleware/: chat_auth.py
phase-3/backend/routes/: chat.py
phase-3/backend/services/: ai_service.py  conversation_service.py  message_service.py
phase-3/backend/src/: config.py  main.py
phase-3/backend/tests/: test_api_validation.py  test_chat.py  test_chat_basic.py  test_ownership.py
phase-3/backend/utils/: __init__.py
phase-3/docs/: chatbot-usage.md
phase-3/frontend/: README.md  middleware.ts  package-lock.json
phase-3/frontend/app/: layout.tsx  not-found.tsx  page.tsx
phase-3/frontend/docs/: routing-guide.md
phase-3/frontend/hooks/: task.ts  use-undo.ts  useApi.ts  useChat.ts  useChat.tsx
phase-3/frontend/lib/: accessibility.ts  aria.ts
phase-3/frontend/services/: api-client.js  task.ts
phase-3/frontend/types/: auth.ts
phase-3/history/prompts/: 1-ai-chatbot-spec.spec.prompt.md
phase-3/mcp-server/: README.md  pyproject.toml
phase-3/mcp-server/sdk_mcp_client/: main.py  pyproject.toml
phase-3/mcp-server/src/: __init__.py  client.py  config.py  main.py  rough_client.py  rough_tools.py  tools.py  utils.py
phase-3/mcp-server/tests/: conftest.py  test_add_task.py  test_basic.py  test_complete_task.py  test_delete_task.py  test_integration.py  test_list_tasks.py  test_list_tasks_filter.py  test_update_task.py
phase-3/mcp_server/: __init__.py  main.py  pyproject.toml
phase-3/mcp_server/tools/: __init__.py  task_tools.py
phase-3/specs/001-ai-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
phase-3/specs/001-backend-api/: data-model.md  plan.md  research.md
phase-3/specs/001-database-layer/: data-model.md  spec.md  tasks.md
phase-3/todo_cli/: main.py
(+382 files in other folders)
