[project]
name = "todo-cli"
version = "1.0.0"
description = "A command-line interface application for managing todo tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
todo = "src.main:main"

[dependency-groups]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
